[gd_scene load_steps=16 format=3 uid="uid://ckxyt2ma23oga"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_dwcse"]
[ext_resource type="Texture2D" uid="uid://c8w3yxmh0ox14" path="res://assets/player/player.png" id="1_p86h2"]
[ext_resource type="PackedScene" uid="uid://b2j4i3youx03q" path="res://scenes/shooter/shooter.tscn" id="3_2xeyi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3llde"]
size = Vector2(10, 18)

[sub_resource type="Animation" id="Animation_dkqk0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_3kjb4"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_2x7yo"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_yhi6p"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 13, 15, 16]
}

[sub_resource type="Animation" id="Animation_7kdci"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_3n38x"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yd20p"]
_data = {
"RESET": SubResource("Animation_dkqk0"),
"fall": SubResource("Animation_3kjb4"),
"hurt": SubResource("Animation_2x7yo"),
"idle": SubResource("Animation_yhi6p"),
"jump": SubResource("Animation_7kdci"),
"run": SubResource("Animation_3n38x")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_edmbb"]
radius = 5.0
height = 18.0

[sub_resource type="Animation" id="Animation_nau87"]
resource_name = "invincible"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.309804), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fet8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3b0d"]
_data = {
"RESET": SubResource("Animation_fet8f"),
"invincible": SubResource("Animation_nau87")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource("1_dwcse")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_p86h2")
hframes = 19
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 6)
shape = SubResource("RectangleShape2D_3llde")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yd20p")
}
autoplay = "idle"

[node name="debugLabel" type="Label" parent="."]
offset_left = -11.0
offset_top = -42.0
offset_right = 140.0
offset_bottom = 165.0
scale = Vector2(0.16143, 0.161896)
theme_override_font_sizes/font_size = 48
text = "place
holder
text"

[node name="SoundPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-1, 6)
shape = SubResource("CapsuleShape2D_edmbb")
debug_color = Color(0.752941, 0.34902, 0.756863, 0.419608)

[node name="Shooter" parent="." instance=ExtResource("3_2xeyi")]
speed = 200.0
shoot_delay = 1.0

[node name="AnimationPlayerInvincible" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x3b0d")
}

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
